Update 5.3 Federated identity with a third-party service.md

--- a/DOMAIN5: Identity and Access Management (IAM)/5.3 Federated identity with a third-party service.md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.3 Federated identity with a third-party service.md
@@ -53,3 +53,101 @@ However, using a third-party IDaaS provider comes with inherent risks. Availabil
 <details> <summary>Show answer</summary> According to Microsoft, a role is a set of permissions defining what a user or group can do within a system. For example, a Sales Manager role might allow access to customer data, creating sales orders, and managing teams, specifying the actions that individuals in that role can perform. </details>
 
 ---
+
+## 5.3.1 On-premise ##
+
+On-premises (or on-prem) refers to identity and access management (IAM) systems that are hosted within an organization’s own infrastructure, like Microsoft Active Directory (AD) or Lightweight Directory Access Protocol (LDAP) servers. These systems run inside the company’s offices or data centers, giving organizations full control over their security, configurations, and hardware.
+
+The biggest advantage of on-prem IAM is total control—organizations can decide how authentication and access policies work without relying on a third party. However, this control comes at a cost: higher maintenance efforts, requiring dedicated staff to manage, secure, and update the system.
+
+One of the biggest challenges with on-prem IAM is integration. Many legacy systems were not built to connect with modern cloud-based applications or support federated identity with external partners. This limitation forces organizations to invest in additional tools like SAML gateways, SSO providers, or IAM extensions to bridge the gap between on-prem and cloud environments.
+
+For security professionals, the trade-off is clear: on-prem solutions offer more control and security oversight but require more effort and expertise to maintain. Organizations need to balance security, cost, and flexibility when deciding whether to keep IAM on-prem or migrate to cloud-based identity services.
+
+:bulb: A Microsoft Domain Controller (DC) is a server that manages security authentication requests in a Microsoft Active Directory environment. It is responsible for verifying user credentials, managing access permissions, and enforcing security policies for all computers and devices within the domain. The Domain Controller stores and manages critical data, such as user accounts, group memberships, and permissions, ensuring centralized management of network resources.
+
+:bulb: In Linux, the equivalent of a Windows Domain Controller is typically a Directory Server that uses LDAP (Lightweight Directory Access Protocol) and Kerberos for authentication and authorization. A popular implementation is Samba, which can act as a domain controller for Linux-based systems, allowing them to integrate with Active Directory environments. Samba can authenticate users, manage access controls, and handle network resources in a similar way to a Windows Domain Controller, but in a Linux ecosystem.
+
+### Open Questions ###
+
+1. What does "on-premises" (on-prem) mean in the context of Identity and Access Management (IAM)?
+
+<details> <summary>Show answer</summary> On-premises IAM refers to identity and access management systems hosted entirely within an organization’s own infrastructure, such as Microsoft Active Directory (AD) or LDAP servers. These solutions are run inside the company’s offices or data centers, giving full control over authentication, access policies, and hardware. </details>
+
+2. What is the main advantage of using an on-prem IAM solution?
+
+<details> <summary>Show answer</summary> The biggest advantage of on-prem IAM is total control. Organizations can customize authentication methods, access policies, and configurations without relying on third parties. This direct oversight enhances security governance and compliance but comes with higher operational costs. </details>
+
+3. What is one of the main challenges organizations face with on-prem IAM systems?
+
+<details> <summary>Show answer</summary> Integration is a major challenge. Legacy on-prem IAM systems often struggle to connect with modern cloud applications or federated identity solutions. To bridge this gap, organizations may need additional tools such as SAML gateways, SSO providers, or IAM extensions. </details>
+
+4. What is the role of a Domain Controller (DC) in a Microsoft Active Directory environment?
+
+<details> <summary>Show answer</summary> A Domain Controller manages authentication and security requests in Active Directory. It verifies user credentials, enforces access permissions, and applies security policies across the network. The DC also stores critical data like user accounts, group memberships, and permissions, ensuring centralized control of resources. </details>
+
+5. What is the Linux equivalent of a Windows Domain Controller, and how does it work?
+
+<details> <summary>Show answer</summary> In Linux, a Directory Server using LDAP and Kerberos serves as the equivalent of a Windows Domain Controller. A popular implementation is **Samba**, which can act as a domain controller for Linux systems and integrate with Active Directory. Samba authenticates users, manages access controls, and handles network resources in a similar way to a Windows DC. </details>
+
+
+## 5.3.2 Cloud ##
+
+Some companies are born in the cloud and never use traditional on-prem infrastructure. Others, often older organizations, move to the cloud to cut costs and simplify IT management. In both cases, maintaining legacy IAM systems (which require expensive hardware, software, and specialized IT staff) makes little sense. Instead, Identity as a Service (IDaaS) provides a more efficient, scalable, and cost-effective solution.
+IDaaS acts as a central identity hub, managing user authentication and access to cloud-based applications and federating identities across different platforms, services, or even partner organizations. For businesses transitioning to the cloud but still relying on some legacy systems, hybrid IDaaS can bridge the gap—extending IAM capabilities to both on-prem and cloud environments.
+
+One of the biggest advantages of cloud IDaaS is its ability to automate user provisioning. Many SaaS applications integrate directly with IDaaS, allowing for Just-in-Time (JIT) provisioning. This means a user’s account is created automatically when they first attempt to log in, provided they have the right permissions. This reduces administrative overhead, eliminates manual setup delays, and ensures that access is granted securely and efficiently.
+
+1. Why are many organizations moving away from traditional on-prem IAM systems?
+
+<details> <summary>Show answer</summary> Traditional on-prem IAM requires costly hardware, complex software, and specialized IT staff to maintain. For companies born in the cloud—or older organizations seeking cost reduction and simplicity—maintaining such legacy systems no longer makes sense. Cloud-based alternatives like IDaaS provide scalability, efficiency, and lower operational costs. </details>
+
+2. What is Identity as a Service (IDaaS), and what role does it play in modern organizations?
+
+<details> <summary>Show answer</summary> IDaaS is a cloud-based identity management solution that serves as a central hub for authentication and access control. It manages user logins, provides secure access to SaaS and cloud applications, and supports federated identity across multiple services or partner organizations, ensuring consistent identity management. </details>
+
+3. How does hybrid IDaaS help organizations in transition from on-prem to cloud environments?
+
+<details> <summary>Show answer</summary> Hybrid IDaaS bridges the gap between legacy IAM and cloud services. It extends identity management to both on-prem systems and cloud applications, allowing organizations with older infrastructure to modernize gradually while still maintaining secure access across environments. </details>
+
+4. What is Just-in-Time (JIT) provisioning in the context of IDaaS?
+
+<details> <summary>Show answer</summary> Just-in-Time (JIT) provisioning is an IDaaS feature that automatically creates user accounts the first time a user attempts to log in, provided they have valid permissions. This reduces administrative overhead, eliminates manual account setup, and ensures access is provisioned securely and efficiently. </details>
+
+5. How does IDaaS improve operational efficiency compared to traditional IAM systems?
+
+<details> <summary>Show answer</summary> IDaaS automates user provisioning, integrates directly with many SaaS applications, and scales on demand without requiring organizations to manage hardware or complex upgrades. This streamlines IT operations, reduces costs, and enhances security by enforcing consistent identity policies across all platforms. </details>
+
+---
+
+## 5.3.3 Hybrid ##
+
+Hybrid IDaaS is like having one foot in the cloud and the other still on the ground. It’s a mix of traditional on-premise identity management and modern cloud-based identity solutions. This setup is useful for companies that still rely on legacy systems but are gradually moving to the cloud. A common example is an organization using Microsoft Active Directory (AD) for internal applications while also adopting Azure AD, Microsoft’s cloud-based identity service. Both systems work together, synchronizing user credentials and access rights, allowing a smooth transition over time.
+
+Even if a full migration to the cloud isn’t the goal, hybrid IDaaS helps bridge the gap. On-premise IAM systems continue to manage older applications, while cloud-based IDaaS handles authentication for web-based services and external partners. This setup simplifies user experience by allowing single sign-on (SSO), so employees don’t have to juggle multiple logins.
+
+However, managing a hybrid identity system comes with challenges. Organizations need to maintain both environments, ensuring security, updates, and proper synchronization between systems. There’s also an inherent risk—if the cloud provider managing identities is compromised, attackers could potentially gain access to on-premise resources as well. That’s why careful planning, proper security controls, and regular monitoring are essential when adopting a hybrid IDaaS approach.
+
+### Open Questions ###
+
+What is Hybrid IDaaS, and why do organizations use it?
+
+<details> <summary>Show answer</summary> Hybrid IDaaS combines traditional on-prem identity management with modern cloud-based identity solutions. Organizations use it when they still rely on legacy systems but also want to leverage cloud services. This approach allows them to gradually transition to the cloud while maintaining support for existing applications. </details>
+
+Can you give an example of how Hybrid IDaaS works in practice?
+
+<details> <summary>Show answer</summary> A common example is an organization using Microsoft Active Directory (AD) for on-prem applications and Azure AD for cloud-based services. Both systems synchronize user credentials and access rights, enabling employees to log in once and access resources across both environments seamlessly. </details>
+
+How does Hybrid IDaaS improve the user experience?
+
+<details> <summary>Show answer</summary> Hybrid IDaaS often supports Single Sign-On (SSO), meaning employees don’t need multiple usernames and passwords for different systems. They authenticate once, and the system provides secure access across on-prem and cloud resources, reducing password fatigue and improving productivity. </details>
+
+What challenges come with managing a Hybrid IDaaS setup?
+
+<details> <summary>Show answer</summary> Managing Hybrid IDaaS requires maintaining both environments, applying security patches, ensuring proper synchronization, and managing configurations across systems. This increases operational complexity and requires strong IT governance to prevent misconfigurations or security gaps. </details>
+
+What are the main risks of using Hybrid IDaaS, and how can they be mitigated?
+
+<details> <summary>Show answer</summary> The main risk is that if the cloud identity provider is compromised, attackers might gain access to on-prem resources as well. To mitigate this, organizations must enforce strong authentication (e.g., MFA), apply continuous monitoring, secure synchronization processes, and regularly audit both environments for vulnerabilities. </details>
+
+---
