Update 5.6 Implement authentication systems.md

--- a/DOMAIN5: Identity and Access Management (IAM)/5.6 Implement authentication systems.md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.6 Implement authentication systems.md
@@ -21,3 +21,66 @@ Similarly, Kerberos provides secure authentication in networked environments usi
 :bulb: Kerberos is a network authentication protocol that uses symmetric key cryptography to enable secure authentication between users and services in a distributed environment. The process begins when a user (the client) requests access to a service by sending an authentication request to the Authentication Server (AS), which is part of the Key Distribution Center (KDC). The Authentication Server validates the user's credentials and, if successful, issues a Ticket-Granting Ticket (TGT), which proves the user's identity.
 The client then presents this TGT to the Ticket-Granting Server (TGS), requesting a service ticket for a specific application or service they wish to access. If the user is authorized to access the service, the TGS issues a service ticket that is encrypted with the service's secret key. The client provides the service ticket to the target service, which uses its secret key to decrypt the ticket, authenticate the client, and grant access. This process minimizes the need for users to re-enter passwords repeatedly and ensures that sensitive credentials are never transmitted over the network, reducing the risk of credential theft. Kerberos is widely used in modern systems, such as Microsoft Active Directory, to enable Single Sign-On (SSO) and simplify identity management across a networked environment.
 
+:link: More Info about Kerberos are available in [4.1.3 Secure Protocols](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/04675906af38bae6e3cbb5be480a4e0b34b43513/DOMAIN4%3A%20Communication%20and%20Network%20Security/4.1%20Apply%20secure%20design%20principles%20in%20network%20architectures.md#413-secure-protocols-eg-internet-protocol-security-ipsec-secure-shell-ssh-secure-sockets-layer-ssl-transport-layer-security-tls)
+
+### Open Questions ###
+
+1. What is the primary function of authentication in access management, and how is it supported by various systems?  
+<details>
+  <summary>Show answer</summary>
+Authentication is the process of verifying the identity of individuals or entities before granting access to resources. Various systems, such as local authentication methods for individual computers, network-based systems like LDAP or Identity-as-a-Service (IDaaS), and remote access or federated identity systems, are employed to meet diverse use cases and security requirements.  
+</details>
+
+2. How does OAuth work in the context of federated identity scenarios, and what are its primary roles?  
+<details>
+  <summary>Show answer</summary>
+OAuth enables secure authorization for third-party applications without exposing user credentials. In federated identity scenarios, OAuth facilitates the delegation of authorization from the user (resource owner) to the third-party application. The Identity Provider (IdP) authenticates the user and provides authorization information to relying applications.  
+</details>
+
+3. What is the significance of access tokens in the OAuth process, and how do they ensure secure access to resources?  
+<details>
+  <summary>Show answer</summary>
+Access tokens in OAuth represent authorization granted to a third-party application to access specific resources on the user's behalf. These tokens ensure secure access by validating each request made by the application to the Resource Server, without exposing the user's credentials.  
+</details>
+
+4. How does OpenID Connect (OIDC) extend OAuth 2.0 to provide authentication and a Single Sign-On (SSO) experience?  
+<details>
+  <summary>Show answer</summary>
+OpenID Connect (OIDC) builds on OAuth 2.0 by adding authentication features to provide Single Sign-On (SSO). OIDC allows users to authenticate with an Identity Provider (such as Google or Facebook), simplifying the login process and enabling seamless access to multiple applications with a single login.  
+</details>
+
+5. What role does the ID Token play in the OIDC process, and how does it contribute to verifying user identity?  
+<details>
+  <summary>Show answer</summary>
+The ID Token in OIDC is a JWT (JSON Web Token) containing user identity claims, such as name and email. It helps the application authenticate the user, while the access token provides access to the user's resources. The ID Token enables the application to verify the user's identity and ensures a secure and consistent authentication process.  
+</details>
+
+6. How does Security Assertion Markup Language (SAML) work in Single Sign-On (SSO) scenarios to facilitate authentication and authorization?  
+<details>
+  <summary>Show answer</summary>
+Security Assertion Markup Language (SAML) is used in SSO scenarios to exchange authentication and authorization data between the Identity Provider (IdP) and the Service Provider (SP). The IdP authenticates the user and issues a SAML assertion, which contains the user's identity and access rights, allowing the SP to grant access without re-authenticating.  
+</details>
+
+7. What is the purpose of the SAML assertion, and what kind of information does it typically contain?  
+<details>
+  <summary>Show answer</summary>
+The SAML assertion contains authentication statements and attributes about the user, such as their identity, role, and access rights. This information is used by the Service Provider (SP) to validate the user's identity and authorize access to the requested resources.  
+</details>
+
+8. How does Kerberos enable secure authentication in networked environments, and what role do tickets play in this process?  
+<details>
+  <summary>Show answer</summary>
+Kerberos is a network authentication protocol that uses encrypted tickets to securely authenticate users and services in a distributed environment. When a user requests access to a service, Kerberos issues a Ticket-Granting Ticket (TGT), which is later used to obtain a service ticket from the Ticket-Granting Server (TGS). This ensures secure authentication without repeatedly transmitting passwords.  
+</details>
+
+9. What is the advantage of using Kerberos for Single Sign-On (SSO) in a distributed environment?  
+<details>
+  <summary>Show answer</summary>
+The advantage of using Kerberos for Single Sign-On (SSO) is that it allows users to authenticate once and then access multiple services without needing to re-enter credentials. This minimizes password entry, reduces administrative burden, and enhances security by ensuring credentials are never transmitted over the network.  
+</details>
+
+10. What are the key differences between OAuth, OpenID Connect (OIDC), SAML, and Kerberos in terms of authentication and authorization?  
+<details>
+  <summary>Show answer</summary>
+OAuth is primarily an authorization framework, enabling secure access delegation, while OpenID Connect (OIDC) adds authentication capabilities for a complete solution, including SSO. SAML is an XML-based framework used for SSO and exchanging authentication/authorization data between IdP and SP. Kerberos is a protocol for network authentication using encrypted tickets, providing SSO in distributed systems. Each protocol has different methods for handling authentication and authorization, depending on the specific security needs of the environment.  
+</details>
