--- a/DOMAIN6: Security Assessment and Testing/6.1 Design and validate assessment, test, and audit strategy.md
+++ b/DOMAIN6: Security Assessment and Testing/6.1 Design and validate assessment, test, and audit strategy.md
@@ -1,2 +1,44 @@
 ## 6.1 Design and validate assessment, test, and audit strategy ##
 
+We've spent all this time learning how to build a secure environment… now it’s time to verify if it actually is secure. Tests, assessments, and audits are the tools security professionals use to uncover vulnerabilities, misconfigurations, and procedural weaknesses before attackers do. Domain 6 teaches how to look under the hood of your security program and answer the big question: “*Are we really protected?*”
+
+**Testing** is like doing a fire drill. Penetration tests (pen tests), vulnerability scans, and security functional tests are about simulating attacks, checking what works, and what doesn’t. These are often technical, hands-on, and actively probe systems to see what breaks.
+
+**Assessments** are broader and more strategic. They’re not about “hacking the system,” but evaluating the overall posture—how well policies are followed, how risks are identified, and where improvements are needed. These can include risk assessments, security assessments, and gap analyses. They’re the “health checkups” of your security ecosystem.
+
+**Audits** are even more formal, often tied to compliance and regulations. Whether internal or external, an audit checks if you're actually doing what you say you're doing. Think policies, procedures, logs, and documentation. Auditors follow a structured process to verify controls are in place and functioning—because regulators and stakeholders need proof, not promises.
+
+:necktie: We don’t secure a system by installing firewalls and crossing out fingers. We need a feedback loop—a cycle of testing, evaluating, and adjusting. Domain 6 is about holding our systems, processes, and people accountable—and building confidence that your defenses are real, not theoretical.
+
+:link: [NIST SP 800-53A Assessing Security and Privacy Controls in Information Systems and Organizations](https://csrc.nist.gov/pubs/sp/800/53/a/r5/final) defines Four Types of Assessment Objects (what can be assessed):
+Specifications – Documents such as policies, plans, procedures, or system security plans.
+Mechanisms – Security functions or features (e.g., encryption, access control).
+Activities – Operations performed by people or systems (e.g., monitoring, backups).
+Individuals – People performing roles (e.g., security officers, admins).
+
+And Four Components of an Assessment Approach (how to assess):
+Assessment Object – The target (specifications, mechanisms, activities, individuals).
+Assessment Method – How you assess (examine, interview, test).
+Assessment Procedure – The step-by-step guide to performing the assessment.
+Assessment Result – The output (pass/fail, compliant/non-compliant, findings).
+ 
+flowchart TD
+    A["🛡️ NIST SP 800-53A <br/> Security & Privacy Assessments"]
+
+    subgraph O["📦 Four Types of Assessment Objects (What to Assess)"]
+        O1["📄 Specifications <br/> Policies, plans, procedures, SSP"]
+        O2["⚙️ Mechanisms <br/> Encryption, access control"]
+        O3["🔄 Activities <br/> Monitoring, backups"]
+        O4["👤 Individuals <br/> Security officers, admins"]
+    end
+
+    subgraph C["🧭 Four Components of an Assessment Approach (How to Assess)"]
+        C1["🎯 Assessment Object <br/> Target of assessment"]
+        C2["🔍 Assessment Method <br/> Examine, Interview, Test"]
+        C3["📝 Assessment Procedure <br/> Step-by-step guide"]
+        C4["📊 Assessment Result <br/> Pass/Fail, Findings"]
+    end
+
+    A --> O
+    A --> C
+
